--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -9,13 +9,40 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Holt alle Commits und Tags
+      - name: Get the last tag and commit hash
+        run: |
+          LAST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
+          SHORT_COMMIT_HASH=$(git rev-parse --short HEAD)
+          RELEASE_NAME="${LAST_TAG}-${SHORT_COMMIT_HASH}"
+          echo "LAST_TAG=$LAST_TAG" >> $GITHUB_ENV
+          echo "RELEASE_NAME=$RELEASE_NAME" >> $GITHUB_ENV
+          echo "TAG=$LAST_TAG" >> $GITHUB_ENV
       - name: Compile LaTeX document
         uses: dante-ev/latex-action@latest
         with:
-          root_file: 2025-02_Paragraph_14a.tex
+          root_file: Paragraph_14a.tex
           args: -synctex=0 -interaction=nonstopmode --shell-escape -pdf -file-line-error
       - name: Save PDF as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: 2025-02_Paragraph_14a.pdf
-          path: 2025-02_Paragraph_14a.pdf
+          name: Paragraph_14a.pdf
+          path: Paragraph_14a.pdf
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.TAG }}
+          release_name: ${{ env.RELEASE_NAME }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./Paragraph_14a_${{ env.TAG }}.pdf
+          asset_name: Paragraph_14a_${{ env.TAG }}.pdf
+          asset_content_type: application/pdf
