--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -4,6 +4,8 @@ on: [push]
 jobs:
   build_latex:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
