--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -38,7 +38,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ env.TAG }}
-          release_name: ${{ env.RELEASE_NAME }}
+          release_name: Presentation_{{ env.RELEASE_NAME }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
