--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -3,7 +3,7 @@ on:
   push:
     tags:
       - "v*"
-      
+
 jobs:
   build_latex:
     runs-on: ubuntu-latest
@@ -34,22 +34,42 @@ jobs:
         with:
           name: PDF
           path: Paragraph_14a_${{ env.TAG }}.pdf
+      
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
+        run: |
+          UPLOAD_URL=$(gh release create ${{ env.TAG }} \
+            --title "Presentation_${{ env.RELEASE_NAME }}" \
+            --notes "Automatically generated release" \
+            --json upload_url \
+            --jq '.upload_url')
+          echo "UPLOAD_URL=$UPLOAD_URL" >> "$GITHUB_ENV"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.TAG }}
-          release_name: Presentation_{{ env.RELEASE_NAME }}
-          draft: false
-          prerelease: false
+
       - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
+        run: |
+          gh release upload ${{ env.TAG }} "./Paragraph_14a_${{ env.TAG }}.pdf" \
+            --clobber
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./Paragraph_14a_${{ env.TAG }}.pdf
-          asset_name: Paragraph_14a_${{ env.TAG }}.pdf
-          asset_content_type: application/pdf
+          
+      # - name: Create Release
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: ${{ env.TAG }}
+      #     release_name: Presentation_{{ env.RELEASE_NAME }}
+      #     draft: false
+      #     prerelease: false
+      # - name: Upload Release Asset
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: ./Paragraph_14a_${{ env.TAG }}.pdf
+      #     asset_name: Paragraph_14a_${{ env.TAG }}.pdf
+      #     asset_content_type: application/pdf
