--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Save PDF as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: PDF
+          name: Presentation.pdf
           path: Paragraph_14a_${{ env.TAG }}.pdf
       
       - name: Create Release
