--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,9 @@
     "build": {
         "dockerfile": "Dockerfile"
     },
+    "features": {
+        "ghcr.io/devcontainers/features/github-cli:1": {}
+    },
     "remoteUser": "texlive",
     "customizations": {
         "vscode": {
@@ -11,7 +14,8 @@
                 "mathematic.vscode-latex",
                 "ms-azuretools.vscode-docker",
                 "meezilla.json",
-                "valentjn.vscode-ltex"
+                "valentjn.vscode-ltex",
+                "github.vscode-github-actions"
             ]
         }
     },
