--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,3 @@
 # Generate your own PAT on https://github.com/settings/tokens/
+# Rename/copy this file to .env and add your PAT, if you want to use gh-cli
 GH_TOKEN=<your_token_here>
